updated the image tag to latest commit sha

--- a/k8s/ui.yaml
+++ b/k8s/ui.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: restaurant-ui
-          image: ghcr.io/ashwinberyl/restaurant-ui:latest
+          image: ghcr.io/ashwinberyl/restaurant-ui:sha-cdb774f
           ports:
             - containerPort: 80
           readinessProbe:
